--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -464,3 +464,16 @@ footer {
   box-shadow: 0 0.2rem 0.5rem 0 rgba(0, 0, 0, 0.24),
     0 0.5rem 1rem 0 rgba(0, 0, 0, 0.19);
 }
+
+/*thanks*/
+.tks {
+  margin: 2rem auto 2rem;
+  text-align: center;
+  background-color: #fdfdfd;
+}
+
+.tks h2 {
+  font-size: 2.5rem;
+  padding: 2rem;
+  color: var(--dark2);
+}
