--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 a {
@@ -78,18 +79,22 @@ header {
 .header-right a {
   margin: 1rem;
   color: var(--dark2);
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 1.8rem;
   transition: 0.5s;
+  font-family: "DM Mono", monospace;
 }
 
 .header-right a:hover {
   color: var(--mid2);
 }
 
+#btn-mobile {
+  display: none;
+}
+
 /*Banner*/
 .banner {
-  background-image: url("../images/banner.png");
+  background-image: url("../images/background-01.jpeg");
   min-height: 80vh;
   text-align: center;
   align-items: center;
@@ -119,13 +124,13 @@ header {
   text-align: center;
   margin-top: -15%;
   border-radius: 5%;
-  height: 80vh;
+  height: 90vh;
   padding: 1% 1%;
 }
 
 .title {
   color: var(--dark2);
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .line {
@@ -141,16 +146,29 @@ header {
 }
 
 .card p {
-  padding-top: 5%;
-  font-size: 1.5rem;
-  font-weight: 500;
+  padding: 5%;
+  font-size: 1rem;
+  font-weight: 700;
   margin-bottom: 20%;
+  line-height: 2rem;
+}
+
+.space1 {
+  height: 5.5rem;
+}
+
+.space2 {
+  height: 2rem;
+}
+
+.space3 {
+  height: 4rem;
 }
 
 .button {
   border: 1px solid #000000;
-  padding: 1.5rem 2rem;
-  border-radius: 20px;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
   font-size: 1.5rem;
   text-align: center;
   align-items: center;
@@ -158,6 +176,7 @@ header {
   font-weight: bold;
   transition: 0.5s;
   text-transform: uppercase;
+  margin-top: 5rem;
 }
 
 .button:hover {
@@ -455,12 +474,12 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
-  /*To Top*/
-  body {
-    margin: 0;
-    padding: 0;
+  /*Global*/
+  .container {
+    width: 100vw;
   }
 
+  /*To Top*/
   #top {
     display: none;
   }
@@ -469,16 +488,58 @@ footer {
     display: none;
   }
 
-  .container {
-    width: 100vw;
-  }
+  /*menu*/
   .header-area {
-    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem;
   }
 
-  .header-right {
-    display: none;
+  .header-right ul {
+    display: flex;
   }
+
+  .header-right a {
+    margin: 1rem;
+    color: var(--dark2);
+    font-size: 2rem;
+    font-weight: 700;
+    transition: 0.5s;
+  }
+
+  .header-right a:hover {
+    color: var(--mid2);
+  }
+
+  #btn-mobile {
+    display: block;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    margin-right: 1rem;
+  }
+
+  .menu {
+    flex-direction: column;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 35%;
+    top: 100px;
+    right: 0;
+    background-color: var(--light);
+    z-index: 99;
+    transition: 0.4s;
+    visibility: hidden;
+    overflow-y: hidden;
+    margin-top: 2rem;
+    opacity: 95%;
+    padding: 2rem;
+  }
+
+  #navBar.active .menu {
+    visibility: visible;
+  }
+
   /*Services*/
   .services {
     flex-direction: column;
@@ -486,12 +547,19 @@ footer {
 
   .card {
     min-width: 100%;
+    max-height: 75vh;
     margin-bottom: 5rem;
     padding-top: 2rem;
   }
 
   .card p {
     margin: 0 10% 20%;
+  }
+
+  .space1,
+  .space2,
+  .space3 {
+    height: 0;
   }
 
   /*About*/
