--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -297,27 +297,29 @@ details ul li {
   max-width: 40vw;
   margin: 2rem auto;
   padding: 2rem;
-  max-height: 70vh;
   overflow: hidden;
+  border-radius: 1rem;
 }
 
 .articles h2 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 .articles p {
   margin: 2rem 0rem;
-  overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.articles a {
+.read {
   color: var(--white);
   background-color: var(--dark2);
   font-size: 1.5rem;
   padding: 0.5rem 3rem;
   border-radius: 0.2rem;
+}
+
+.read:hover {
+  opacity: 90%;
 }
 
 /*Footer*/
@@ -334,6 +336,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .footer-item img {
@@ -482,10 +485,12 @@ footer {
   /*To Top*/
   #top {
     display: none;
+    visibility: hidden;
   }
 
   #whatsappFixed {
     display: none;
+    visibility: hidden;
   }
 
   /*menu*/
@@ -523,7 +528,6 @@ footer {
     display: block;
     position: absolute;
     width: 100%;
-    height: 35%;
     top: 100px;
     right: 0;
     background-color: var(--light);
@@ -547,7 +551,6 @@ footer {
 
   .card {
     min-width: 100%;
-    max-height: 75vh;
     margin-bottom: 5rem;
     padding-top: 2rem;
   }
