--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,6 +188,46 @@ header {
   color: #34af23;
 }
 
+/*New Services*/
+
+.servicesNew {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5rem;
+}
+
+.imageServices {
+  width: 40vw;
+}
+
+.imageServices img {
+  border-radius: 2rem;
+  max-width: 100%;
+}
+
+.service-container {
+  display: flex;
+  margin-top: 5rem;
+}
+
+.service-container div {
+  width: 40vw;
+  margin-right: 5vw;
+}
+
+.service-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.service-image {
+  border-radius: 1rem;
+  width: 90px;
+  height: 90px;
+  margin-right: 1rem;
+}
+
 /*About*/
 .about {
   background-image: linear-gradient(90deg, var(--mid), var(--light));
@@ -476,7 +516,7 @@ footer {
   font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   /*Global*/
   .container {
     width: 100vw;
@@ -542,6 +582,43 @@ footer {
 
   #navBar.active .menu {
     visibility: visible;
+  }
+
+  /*New Services*/
+
+  .servicesNew {
+    flex-direction: column;
+  }
+
+  .imageServices {
+    width: 40vw;
+  }
+
+  .imageServices img {
+    max-width: 100vw;
+    border-radius: 0;
+  }
+
+  .service-container {
+    flex-direction: column;
+  }
+
+  .service-container div {
+    width: 90vw;
+    margin: 0 auto 1rem auto;
+  }
+
+  .service-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+
+  .service-image {
+    border-radius: 1rem;
+    width: 90px;
+    height: 90px;
+    margin-right: 1rem;
   }
 
   /*Services*/
